# xqproxy

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac  xdmcpclient.c  xdmcpclient.h  xqproxy.c  xqproxy.man  xqssh
